# FoodVideoQA

./: .gitignore  LICENSE  NutritionVerse.md  README.md  analysis.py  app.py  data.json  gpt4all_trial.py  hyperparameters.py  infer.py  inference.py  master.py  mouth.py  plot_face.py  pyproject.toml  structure.md  video.py  youtube.py
GPT4All/: app.py
annotations/: annotator.py
config-custom-videos/: 0.mp4.yaml  2.mp4.yaml  3.mp4.yaml
data/: data.json
data/config-custom-videos/: 1.mp4.yaml  2.mp4.yaml  3.mp4.yaml
dataset/: ground_truth.json
dataset_old/: filtered-dataset.json  ground_truth.json
detection/: infer.py  requirements.txt
detection/dwpose/: __init__.py
dwpose/: __init__.py
llava/serve/: cli.py
llm/: eaten.py  frame_diff.py
llm/analysis/: analysis.py  analyze.py  parser.py  scoring.py
llm/frame_diff/: frames.py  nutrition_verse.py
llm/generation/: dataset.py  generate.py  llava.py  models.py  random_frames.py  video.py  video_utils.py  youtube.py
notes/: EMERGENCY_TODO.md  Sid-Krish-Notes.md
pose/: dino.py  eat.py
pose/detection/: drawing_utils.py  face_plotting.py  infer.py  inference.py  inference_utils.py  pose_detector.py  wholebody.py
pose/detection/config/: dwpose-l_384x288.py  yolox_l_8xb8-300e_coco.py
pose/detection/dwpose/: __init__.py  pose_detector.py
pose/localization/: bbox.py  bbox_utils.py  dino.py  draw_utils.py
utils/: constants.py
vlm/: frame_diff.py  parser.py
vlm/analysis/: cvis-metric.py  matching.py  metrics.py  vlm_analysis.py
vlm/generation/: dataset.py  generate.py  models.py  video_utils.py  youtube.py
vlm/intervals/: frame_diff.py  parser.py  rev-frame_diff.py  stitcher.py
