[tool.poetry]
name = "foodvideoqa"
version = "0.1.0"
description = "Extract nutrition insights from video data using advanced deep learning models."
authors = ["Krish Shah <shahkrish2016@gmail.com>", "Siddharth Viswanath <siddharth.n.viswanath@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
awscrt = "^0.14.0"
spacy = "^3.7.5"
gensim = "^4.3.2"
rich = "^13.7.1"
tqdm = "^4.66.5"
transformers = "^4.44.0"
torch = "^2.1.1"
pillow = "^10.4.0"
pyyaml = "^6.0.2"
pytubefix = "^6.12.0"
moviepy = "^1.0.3"
click = "^8.1.7"
numpy = "1.26.4"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
wheel = "^0.44.0"
mmcv = "2.0.0"
chumpy = "0.66"
mmpose = "1.3.2"
openmim = "^0.3.9"
mmengine = "^0.10.4"
mmdet = "^3.3.0"
gradio = "3.16.2"
albumentations = "1.3.0"
imageio = "2.9.0"
imageio-ffmpeg = "0.4.2"
pytorch-lightning = "1.5.0"
omegaconf = "2.1.1"
test-tube = ">=0.7.5"
streamlit = "1.12.1"
einops = "0.3.0"
webdataset = "0.2.5"
kornia = "0.6"
open_clip_torch = "2.0.2"
invisible-watermark = ">=0.1.5"
streamlit-drawable-canvas = "0.8.0"
torchmetrics = "0.6.0"
timm = "0.6.12"
addict = "2.4.0"
yapf = "0.32.0"
prettytable = "3.6.0"
safetensors = ">=0.2.7"
basicsr = "1.4.2"
fvcore = "*"
pycocotools = "*"
wandb = "*"
scipy = "*"
torchvision = "0.16.2"
strenum = "^0.4.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
